--- a/components/Clients/Clients.module.css
+++ b/components/Clients/Clients.module.css
@@ -1,6 +1,7 @@
 .container {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    min-height: 100vh;
+    width: 100%;
     background-color: #fff;
 }
 .center {
@@ -77,9 +78,6 @@
     }
 }
 @media screen and (max-width: 795px) {
-    .container {
-        height: 220vh;
-    }
     .cards {
         grid-template-areas: "card1"
                             " card2"
