--- a/components/Locations/Locations.module.css
+++ b/components/Locations/Locations.module.css
@@ -1,9 +1,11 @@
 .container {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    min-height: 100vh;
+    width: 100%;
     background-color: #D25525;
 }
 .center {
+    height: 100%;
     max-width: 90%;
     margin: 0 auto;
     text-align: center;
@@ -84,9 +86,6 @@
     }
 }
 @media screen and (max-width: 795px) {
-    .container {
-        height: 220vh;
-    }
     .cards {
         grid-template-areas: "card1"
                             " card2"
@@ -97,9 +96,6 @@
     }
 }
 @media screen and (max-width: 370px) {
-    .container {
-        height: 200vh;
-    }
     .image {
         position: relative;
         width: 230px;
